@@ -1,3 +1,8 @@
+2008-04-29  Mario Sanchez Prada  <msanchez@maemo.org>
+
+	* src/log.cc (save_log): Unescape the Gnome VFS uri before storing
+	it in the global variable last_save_log_dir (N80933).
+
 2008-04-28  Marius Vollmer  <marius.vollmer@nokia.com>
 
 	Released 2.1.10
